feat: dev update auth
