# src/main/resources/openapi/documentation.yaml
@@ -4,8 +4,8 @@ info:
   description: "critica_backend API"
   version: "1.0.0"
 servers:
-- url: "http://localhost:8080"
-- url: "https://seahorse-app-qs7ri.ondigitalocean.app"
+  - url: "http://localhost:8080"
+  - url: "https://seahorse-app-qs7ri.ondigitalocean.app"
 paths:
   /:
     get:
@@ -37,24 +37,24 @@ paths:
     get:
       description: ""
       parameters:
-      - name: "Connection"
-        in: "header"
-        required: true
-        description: "Websocket Connection parameter"
-        schema:
-          type: "string"
-      - name: "Upgrade"
-        in: "header"
-        required: true
-        description: "Websocket Upgrade parameter"
-        schema:
-          type: "string"
-      - name: "Sec-WebSocket-Key"
-        in: "header"
-        required: true
-        description: "Websocket Sec-WebSocket-Key parameter"
-        schema:
-          type: "string"
+        - name: "Connection"
+          in: "header"
+          required: true
+          description: "Websocket Connection parameter"
+          schema:
+            type: "string"
+        - name: "Upgrade"
+          in: "header"
+          required: true
+          description: "Websocket Upgrade parameter"
+          schema:
+            type: "string"
+        - name: "Sec-WebSocket-Key"
+          in: "header"
+          required: true
+          description: "Websocket Sec-WebSocket-Key parameter"
+          schema:
+            type: "string"
       responses:
         "101":
           description: "Switching Protocols"
@@ -88,13 +88,13 @@ paths:
       responses:
         "200":
           description: "OK"
-          content: 
+          content:
             application/json:
-                schema:
-                  type: object
-                  properties:
-                    accessToken:
-                      type: string
+              schema:
+                type: object
+                properties:
+                  accessToken:
+                    type: string
   /api/auth/register:
     post:
       tags:
@@ -110,9 +110,9 @@ paths:
       responses:
         "201":
           description: "Created"
-          content: 
+          content:
             application/json:
-              schema: 
+              schema:
                 type: string
                 example: "OK"
   /api/auth/signIn:
@@ -168,11 +168,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -206,11 +206,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -244,16 +244,16 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-      - name: "playerId"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+        - name: "playerId"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -287,11 +287,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       requestBody:
         content:
           application/json:
@@ -332,11 +332,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -373,11 +373,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -483,11 +483,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -521,11 +521,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -559,11 +559,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -597,16 +597,16 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-      - name: "playerId"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+        - name: "playerId"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -640,11 +640,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -678,11 +678,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "204":
           description: "No Content"
@@ -716,11 +716,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -756,11 +756,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -796,16 +796,16 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-      - name: "gameId"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+        - name: "gameId"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -839,11 +839,11 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -877,16 +877,16 @@ paths:
         - BearerAuth: [ ]
       description: ""
       parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-      - name: "playerId"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+        - name: "playerId"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
       responses:
         "200":
           description: "OK"
@@ -1110,19 +1110,31 @@ components:
       properties:
         email:
           type: "string"
-        password:
-          type: "string"
+          format: "email"
+          example: "johndoe@example.com"
         username:
           type: "string"
+          pattern: "^[A-Za-zА-Яа-я0-9]+(?: [A-Za-zА-Яа-я0-9]+)*$"
+          example: "John Doe"
+        password:
+          type: "string"
+          pattern: "^[A-Za-z0-9!@#$%^&*()_+\\-=\\[\\]{};':\"\\\\|,.<>/?]{8,}$"
+          example: "p@ssw0rd123!"
     SignIn:
       type: "object"
       properties:
         email:
           type: "string"
+          format: "email"
+          example: "johndoe@example.com"
         username:
           type: "string"
+          pattern: "^[A-Za-zА-Яа-я0-9]+(?: [A-Za-zА-Яа-я0-9]+)*$"
+          example: "John Doe"
         password:
           type: "string"
+          pattern: "^[A-Za-z0-9!@#$%^&*()_+\\-=\\[\\]{};':\"\\\\|,.<>/?]{8,}$"
+          example: "p@ssw0rd123!"
     SignOut:
       type: "object"
       properties:
@@ -1144,18 +1156,18 @@ components:
         role:
           type: "string"
           enum:
-          - "CITIZEN"
-          - "MAFIOSO"
-          - "DON"
-          - "DETECTIVE"
+            - "CITIZEN"
+            - "MAFIOSO"
+            - "DON"
+            - "DETECTIVE"
         status:
           type: "string"
           enum:
-          - "INGAME"
-          - "ALIVE"
-          - "DEAD"
-          - "REMOVED"
-          - "OPW"
+            - "INGAME"
+            - "ALIVE"
+            - "DEAD"
+            - "REMOVED"
+            - "OPW"
         inGame:
           type: "boolean"
         bonusPoints:
